--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,46 @@
     box-sizing: border-box;
 }
 
-h2{
-    color: blue;
+
+
+header{
+    padding: 20px 0;
+    background-color: rgb(83, 83, 255);
+    color: white;
+
 }
+
+
+
+.todo-list{
+    max-width: 70%;
+    background-color: rgb(83, 83, 255);
+    margin: 50px auto;
+    padding: 25px;
+}
+
+ul li{
+    margin: 40px 0;
+    padding: 15px 0;
+    border-bottom: 1px solid white;
+    color: white;
+}
+
+ul li:last-child{
+    border-bottom: none;
+}
+
+.btn-add-task{
+    padding: 10px 20px;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    transition: 0.3s;
+}
+
+.btn-add-task:hover{
+    background-color: aqua;
+    border: 1px solid aqua;
+
+}
+
